# notation

./: .envrc  .gitignore  .gitmodules  .license.txt  Cargo.toml  LICENSE  README.md  flake.nix  justfile  rustfmt.toml
apps/frets/: Cargo.toml  justfile
apps/frets/src/: app.rs  assets.rs  lib.rs  main.rs
apps/notation_kb/: Cargo.toml  Makefile.toml  index.html  justfile  run-kb_native-cn.ps1  run-kb_native.ps1
apps/notation_kb/assets/help/: usage.md
apps/notation_kb/assets/tabs/: scarborough_fair.ron
apps/notation_kb/src/: assets.rs  index_panel.rs  kb.rs  lib.rs  main.rs
apps/notation_kb/src/guitar/: fretboard.rs  mod.rs  page.rs
apps/notation_kb/src/theory/: harmonics.rs  mod.rs  scale.rs  sound.rs
apps/notation_kb_cn/: Cargo.toml  Makefile.toml
apps/notation_kb_cn/assets/kb/: harmonics.md  welcome.md
apps/notation_kb_cn/src/: main.rs
apps/notation_tool/: Cargo.toml  write-all-tabs.ps1
apps/notation_tool/src/: main.rs
apps/notation_tool/src/tab/: amature_guitar.rs  beginner.rs  mod.rs  test.rs
apps/notation_viewer/: Cargo.toml  Makefile.toml  index.html  justfile  release-viewer_osx.bash  release-viewer_web.ps1  release-viewer_windows.ps1
apps/notation_viewer/assets/: test.eno  test.md  test.ron
apps/notation_viewer/assets/amateur_guitar/: 1_right_hand.ron
apps/notation_viewer/assets/amateurguitar/: 1_right_hand.ron
apps/notation_viewer/assets/beginner/: 1_right_hand.ron
apps/notation_viewer/assets/gltf/: guitar.gltf
apps/notation_viewer/assets/guitar/: scene.gltf  test.md
apps/notation_viewer/assets/help/: usage.md  welcome.md
apps/notation_viewer/assets/kb/: usage.md  welcome.md
apps/notation_viewer/assets/sf2/: SBAWE32.sf2
apps/notation_viewer/assets/tabs/: scarborough_fair.ron  test.ron  test.rs
apps/notation_viewer/src/: assets.rs  bevy_4x_camera.rs  bevy_web_fullscreen.rs  help_panel.rs  lib.rs  main.rs  main_3d.rs  viewer.rs
apps/notation_viewer_cn/: Cargo.toml  Makefile.toml  index.html  release-viewer_osx.bash  release-viewer_windows.ps1  run-viewer_web.ps1
apps/notation_viewer_cn/assets/help/: welcome.md
apps/notation_viewer_cn/assets/kb/: usage.md  welcome.md
apps/notation_viewer_cn/assets/tabs/: long_juan_feng.ron  scarborough_fair.ron  test.ron
apps/notation_viewer_cn/src/: main.rs
bevy/notation_audio/: Cargo.toml
bevy/notation_audio/src/: consts.rs  lib.rs  mono_stream.rs  stereo_stream.rs
crates/notation_audio/: Cargo.toml
crates/notation_audio/src/: lib.rs  mono_stream.rs  stereo_stream.rs
crates/notation_bevy/: Cargo.toml
crates/notation_bevy/src/: lib.rs  viewer.rs
crates/notation_bevy/src/app/: app.rs  app_events.rs  app_state.rs  assets.rs  mod.rs  notation_app.rs  notation_app_events.rs  notation_app_state.rs  notation_assets.rs  top_panel.rs
crates/notation_bevy/src/art/: art_plugin.rs  mod.rs  theme.rs
crates/notation_bevy/src/bar/: bar_beat.rs  bar_bundle.rs  bar_layout.rs  bar_playing.rs  bar_plugin.rs  bar_separator.rs  bar_view.rs  lane_bundle.rs  layer_bundle.rs  mod.rs
crates/notation_bevy/src/chord/: chord_base.rs  chord_bundle.rs  chord_color_background.rs  chord_diagram.rs  chord_interval.rs  chord_note.rs  chord_playing.rs  chord_view.rs  interval_dot.rs  mod.rs
crates/notation_bevy/src/config/: mod.rs  (+9 more)
crates/notation_bevy_utils/: Cargo.toml
crates/notation_bevy_utils/src/: lib.rs  plugin.rs
crates/notation_core/: Cargo.toml
crates/notation_core/src/: chord.rs  core_entry.rs  duration.rs  entry.rs  form.rs  interval.rs  intervals.rs  key.rs  lib.rs  note.rs  notes.rs  octave.rs  pitch.rs  rhythm.rs  scale.rs  solfege.rs  solfeges.rs  syllable.rs  syllable_note.rs  tone.rs
crates/notation_dsl/: Cargo.toml
crates/notation_dsl/src/: bar.rs  context.rs  entry.rs  form.rs  get_tab.rs  layer.rs  lib.rs  line.rs  section.rs  slice.rs  tab.rs  track.rs  util.rs
crates/notation_fretted/: Cargo.toml
crates/notation_fretted/src/: entry.rs  fretboard.rs  fretted.rs  fretted_entry.rs  hand.rs  lib.rs  pick.rs  strum.rs
crates/notation_guitar/: Cargo.toml
crates/notation_guitar/src/: guitar.rs  lib.rs  tuning.rs
crates/notation_macro/: Cargo.toml
crates/notation_macro/src/: lib.rs
crates/notation_midi/: Cargo.toml
crates/notation_midi/src/: lib.rs  midi_audio_stream.rs  midi_events.rs  midi_hub.rs  midi_message.rs  midi_plugin.rs  midi_settings.rs  midi_state.rs  midi_util.rs  native_midi_synth.rs  wasm_midi_synth.rs
crates/notation_model/: Cargo.toml
crates/notation_model/src/: bar.rs  bar_lane.rs  entry.rs  form.rs  lane.rs  lane_entry.rs  lane_kind.rs  lib.rs  line.rs  model_entry.rs  parse.rs  section.rs  slice.rs  slice_entry.rs  tab.rs  tab_bar.rs  tab_chord.rs  track.rs  util.rs
crates/notation_proto/: Cargo.toml
crates/notation_proto/src/: bar.rs  entry.rs  entry_wrap.rs  form.rs  lib.rs  line.rs  lyric_entry.rs  position.rs  proto_entry.rs  section.rs  slice.rs  tab.rs  track.rs  util.rs
crates/notation_tab/: Cargo.toml
crates/notation_tab/src/: helper.rs  lib.rs  tab.rs
dsl/notation_macro/: Cargo.toml
dsl/notation_macro/src/: lib.rs
lib/bevy_easings/: Cargo.toml  README.md
lib/bevy_easings/examples/: README.md  chain.rs  colormaterial_color.rs  custom_component.rs  pause.rs  sprite_size.rs  transform_rotation.rs  transform_translation.rs  ui_style.rs
lib/bevy_easings/src/: implemented.rs  lib.rs  plugin.rs
model/notation_core/: Cargo.toml
model/notation_core/src/: chord.rs  chord_symbol.rs  core_entry.rs  duration.rs  lib.rs  meta_entry.rs  pitch.rs  semitones.rs  signature.rs  tempo.rs  tone.rs
model/notation_guitar/: Cargo.toml
model/notation_guitar/src/: lib.rs
model/notation_model/: Cargo.toml
model/notation_model/src/: lane_kind.rs  lib.rs  model_entry.rs  parse.rs  section.rs  tab.rs  tab_bar.rs  track.rs  util.rs
model/notation_proto/: Cargo.toml
model/notation_proto/src/: bar.rs  lyric_entry.rs  position.rs  proto_entry.rs  section.rs  slice.rs
tools/notation_viewer/: Cargo.toml
tools/notation_viewer/src/: bevy_4x_camera.rs  lib.rs
views/tab_viewer/: Cargo.toml
views/tab_viewer/src/: lib.rs
(+517 files in other folders)
