# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = [
    "crates/notation_core",
    "crates/notation_fretted",
    "crates/notation_proto",
    "crates/notation_dsl",
    "crates/notation_tab",
    "crates/notation_macro",
    "crates/notation_model",
    "crates/notation_audio",
    "crates/notation_midi",
    "crates/notation_bevy",
    "apps/notation_kb",
    "apps/notation_tabs",
    "apps/notation_viewer",
    "apps/frets",
]

# https://rustwasm.github.io/book/reference/code-size.html
[profile.release]
lto = "thin"
opt-level = 's'
# opt-level = 'z'

[profile.dev]
opt-level = 1

[patch.crates-io]
bevy_kira_audio = { git = "https://github.com/yjpark/bevy_kira_audio", branch = "stream-kira-0.5" }
