# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"

[workspace]
resolver = "2"
members = [
    "model/notation_core",
    "model/notation_fretted",
    "model/notation_proto",
    "model/notation_model",
    "dsl/notation_dsl",
    "dsl/notation_tab",
    "dsl/notation_macro",
    "bevy/notation_audio",
    "bevy/notation_midi",
    "views/tab_viewer",
    "apps/notation_kb",
    "apps/notation_tabs",
    "apps/notation_viewer",
]

# https://rustwasm.github.io/book/reference/code-size.html
[profile.release]
lto = "thin"
opt-level = 's'
# opt-level = 'z'

[profile.dev]
opt-level = 1

[patch.crates-io]
# bevy_kira_audio = { git = "https://github.com/yjpark/bevy_kira_audio", branch = "stream-kira-0.5" }

[workspace.dependencies]
notation_core = { path = "model/notation_core", version = "0.6.0" }
notation_fretted = { path = "model/notation_fretted", version = "0.6.0" }
notation_guitar = { path = "model/notation_guitar", version = "0.6.0" }
notation_proto = { path = "model/notation_proto", version = "0.6.0" }
notation_model = { path = "model/notation_model", version = "0.6.0" }
notation_dsl = { path = "dsl/notation_dsl", version = "0.6.0" }
notation_macro = { path = "dsl/notation_macro", version = "0.6.0" }
notation_tab = { path = "dsl/notation_tab", version = "0.6.0" }
notation_audio = { path = "bevy/notation_audio", version = "0.6.0" }
notation_midi = { path = "bevy/notation_midi", version = "0.6.0" }

edger_bevy_app = { path = "../../edger-dev/crates/bevy/app" }
# edger_bevy_app = { git = "https://github.com/edger-dev/crates", branch = "main" }

fehler = "1.0"
serde = { version = "1.0", features = ["derive", "alloc"] }
# https://github.com/serde-rs/serde/issues/1937
serde_arrays = "0.1"

uuid = { version = "1.2", features = ["serde", "v4"] }
ron = "0.8"
thiserror = "1.0"
anyhow = "1.0"
float_eq = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features=["wasm-bindgen"] }
lazy_static = "1.4"
rfd = "0.11"
unic-langid = { version = "0.9", features = [ "macros" ] }
clap = { version = "4.0", features = [ "derive" ] }

bevy = { version = "0.11", default-features = false }
bevy_prototype_lyon = "0.9"
bevy_easings = "0.11"
bevy_asset_loader = { version = "0.17", features = [ "standard_dynamic_assets" ]}

bevy_egui = { version = "0.21" }

bevy_kira_audio = { version = "0.11", git = "https://github.com/yjpark/bevy_kira_audio", branch = "stream-kira-0.5_bevy-0.11" }

# [target.'cfg(target_arch = "wasm32")'.workspace.dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1"
gloo-events = "0.1"
futures = "0.3"
web-sys = { version = "0.3", features = [
    "Element", "Document", "Window", "Location", "Url", "UrlSearchParams", "console", "TouchEvent",
    #https://rustwasm.github.io/docs/wasm-bindgen/examples/web-audio.html
    "AudioContext", "AudioDestinationNode", "AudioNode", "AudioParam", "GainNode", "OscillatorNode", "OscillatorType",
]}
