[package]
name = "frets"
version = "0.1.0"
edition = "2021"
description = "Notation Frets"

[package.metadata.bundle]
identifier = "fun.notation.frets"
resources = ["assets"]

[features]
default = [
    "tab_viewer/midi",
]

native = [
    "tab_viewer/native",
    "tab_viewer/dsl",
]

[dependencies]
tab_viewer = { path = "../../views/tab_viewer" }