[package]
name = "notation_kb"
version = "0.4.0"
edition = "2021"
description = "Fun Notation Knowledge Base"

[package.metadata.bundle]
identifier = "fun.notation.kb"
resources = ["assets"]

[features]
default = [
    "notation_bevy/midi",
]

native = [
    "notation_bevy/native",
    "notation_bevy/dsl",
]

[dependencies]
notation_bevy = { path = "../../crates/notation_bevy" }
notation_viewer = { path = "../notation_viewer" }
