[package]
name = "notation_kb"
version = "0.6.0"
edition = "2021"
description = "Fun Notation Knowledge Base"

[package.metadata.bundle]
identifier = "fun.notation.kb"
resources = ["assets"]

[features]
default = [
    "tab_viewer/midi",
    "tab_viewer/with_egui",
]

native = [
    "tab_viewer/native",
    "tab_viewer/dsl",
]

[dependencies]
tab_viewer = { path = "../../views/tab_viewer" }
notation_viewer = { path = "../notation_viewer" }

bevy = { version = "0.9", default-features = false }
bevy_asset_loader = { version = "0.14", features = [ "standard_dynamic_assets" ]}

