[package]
name = "notation_kb"
publish = false
version = "0.6.0"
description = "Fun Notation Knowledge Base"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.bundle]
identifier = "fun.notation.kb"
resources = ["assets"]

[features]
default = [
    "tab_viewer/midi",
    "tab_viewer/with_egui",
]

native = [
    "tab_viewer/native",
    "tab_viewer/dsl",
]

web = [
    "tab_viewer/web",
]

[dependencies]
tab_viewer = { path = "../../views/tab_viewer" }
notation_viewer = { path = "../notation_viewer" }

bevy = { workspace = true }
bevy_asset_loader = { workspace = true }

