[package]
name = "notation_viewer"
version = "0.5.0"
edition = "2021"
description = "Notation Viewer"

[package.metadata.bundle]
identifier = "fun.notation.viewer"
resources = ["assets"]

[features]
default = [
    "notation_bevy/midi",
    "notation_bevy/with_egui",
]

native = [
    "notation_bevy/native",
    "notation_bevy/dsl",
]

[dependencies]
notation_bevy = { path = "../../crates/notation_bevy" }

bevy = { version = "0.9", default-features = false }
bevy_asset_loader = { version = "0.14", features = [ "standard_dynamic_assets" ]}
