[package]
name = "notation_viewer"
version = "0.5.0"
edition = "2021"
description = "Notation Viewer"

[package.metadata.bundle]
identifier = "fun.notation.viewer"
resources = ["assets"]

[features]
default = [
    "tab_viewer/midi",
    "tab_viewer/with_egui",
]

native = [
    "tab_viewer/native",
    "tab_viewer/dsl",
]

[dependencies]
tab_viewer = { path = "../../views/tab_viewer" }

bevy = { version = "0.9", default-features = false }
bevy_asset_loader = { version = "0.14", features = [ "standard_dynamic_assets" ]}
