[package]
name = "notation_viewer"
publish = false
version = "0.6.0"
description = "Notation Viewer"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[package.metadata.bundle]
identifier = "fun.notation.viewer"
resources = ["assets"]

[features]
default = [
    "tab_viewer/midi",
    "tab_viewer/with_egui",
]

native = [
    "tab_viewer/native",
    "tab_viewer/dsl",
]

web = [
    "tab_viewer/web",
]

[dependencies]
tab_viewer = { path = "../../views/tab_viewer" }

bevy = { workspace = true }
bevy_asset_loader = { workspace = true }
