[package]
name = "notation_viewer_cn"
version = "0.3.3"
edition = "2021"
description = "Notation Viewer (Chinese)"

[package.metadata.bundle]
identifier = "fun.notation.viewer_cn"
resources = ["assets"]

[features]
default = [
    "notation_bevy/chinese",
]
native = [
    "notation_bevy/native",
    "notation_bevy/dsl",
]
dev = [
    "notation_bevy/dev",
    "native",
]
inspector = [
    "notation_bevy/inspector",
    "native",
]

[dependencies]
notation_bevy = { version = "0.3.3", path = "../../crates/notation_bevy" }
