[package]
name = "notation_viewer_cn"
version = "0.3.4"
edition = "2021"
description = "Notation Viewer (Chinese)"

[package.metadata.bundle]
identifier = "fun.notation.viewer_cn"
resources = ["assets"]

[features]
default = [
    "notation_bevy/chinese",
]
native = [
    "notation_viewer/native",
]
dev = [
    "notation_viewer/dev",
    "native",
]

[dependencies]
notation_viewer = { path = "../notation_viewer" }
notation_bevy = { path = "../../crates/notation_bevy" }
