[package]
name = "notation_audio"
version = "0.6.0"
description = "Fun notation - audio features"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[features]
default = [
    "bevy/bevy_audio",
    "bevy/bevy_asset",
]

[dependencies]
bevy = { workspace = true }

ringbuffer = "0.15.0"
ringbuf = "0.4.0-rc.2"
