[package]
name = "notation_audio"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - audio features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[features]

[dependencies]
bevy = { version = "0.9", default-features = false }
bevy_kira_audio = "0.11"
ringbuf = "0.2.8"