[package]
name = "notation_audio"
version = "0.6.0"
description = "Fun notation - audio features"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[features]

[dependencies]
bevy = { workspace = true }
bevy_kira_audio = { workspace = true }

ringbuf = "0.2.8"
