[package]
name = "notation_bevy"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - bevy features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

dev = [
    #"bevy/dynamic",
    "notation_bevy_utils/dev",
]

inspector = [
    "bevy-inspector-egui",
    "notation_bevy_utils/inspector",
    "notation_midi/inspector",
]

native = [
    "bevy/bevy_wgpu",
]

dsl = [
    "notation_dsl",
]

chinese = [
]

[dependencies]
notation_bevy_utils = { version = "0.3.2", path = "../notation_bevy_utils" }

notation_model = { version = "0.3.2", path = "../notation_model" }
notation_midi = { version = "0.3.2", path = "../notation_midi" }

notation_dsl = { version = "0.3.3", path = "../notation_dsl", optional = true }

serde = {version = "1.0.126", features = ["derive"]}
# https://github.com/serde-rs/serde/issues/1937
serde_arrays = "0.1.0"
anyhow = "1.0"
ron = "0.6"
float_eq = "0.6"

bevy = { version = "0.5.0", default-features = false }

rand = "0.8"
getrandom = {version="0.2", features=["wasm-bindgen"]}

bevy_prototype_lyon = "0.3.1"
bevy_asset_loader = "0.6.0"
bevy_egui = "0.9"
bevy_easings = "0.4.1"
# bevy_svg = "0.3"
# bevy_svg_map = "0.2"

bevy-inspector-egui = { version = "0.5.1", optional = true }
rfd = "0.6.2"

#[target."cfg(not(target_arch = "wasm32"))".dependencies]
# Can not enable bevy_wgpu in this way, so the actually binary crate
# need to include native feature manually
# https://github.com/rust-lang/cargo/issues/1197
# if not providing the dev and inspector feature, then can create a
# wrapper crate, though think having these features benefits more

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.69"
bevy_webgl2 = "0.5.0"
console_error_panic_hook = "0.1"
gloo-events = "0.1.1"
futures = "0.3"
web-sys = { version = "0.3.45", features = [
    "Element", "Document", "Window", "Location", "console", "TouchEvent",
    #https://rustwasm.github.io/docs/wasm-bindgen/examples/web-audio.html
    "AudioContext", "AudioDestinationNode", "AudioNode", "AudioParam", "GainNode", "OscillatorNode", "OscillatorType",
]}
