[package]
name = "notation_bevy"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - bevy features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

native = [
    "clap",
]

midi = [
    "notation_midi",
]

dsl = [
    "notation_dsl",
]

[dependencies]
notation_bevy_utils = { version = "0.4.2", path = "../notation_bevy_utils" }

notation_model = { version = "0.5.0", path = "../notation_model" }

notation_midi = { version = "0.5.0", path = "../notation_midi", optional = true }
notation_dsl = { version = "0.5.0", path = "../notation_dsl", optional = true }

serde = { version = "1.0.133", features = [ "derive" ] }
# https://github.com/serde-rs/serde/issues/1937
serde_arrays = "0.1.0"
anyhow = "1.0"
thiserror = "1.0"
ron = "0.7"
float_eq = "0.7"

bevy = { version = "0.6.0", default-features = false }

rand = "0.8"
getrandom = { version = "0.2", features = [ "wasm-bindgen" ] }

bevy_prototype_lyon = "0.4.0"
bevy_egui = "0.11.1"
bevy_easings = "0.5.0"

bevy_asset_loader = "0.8.0"

rfd = "0.6.3"
lazy_static = "1.4.0"
unic-langid = { version = "0.9", features = [ "macros" ] }

clap = { version = "3.0.12", features = [ "derive" ], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.79"
console_error_panic_hook = "0.1"
gloo-events = "0.1.1"
futures = "0.3"
web-sys = { version = "0.3.55", features = [
    "Element", "Document", "Window", "Location", "Url", "UrlSearchParams", "console", "TouchEvent",
    #https://rustwasm.github.io/docs/wasm-bindgen/examples/web-audio.html
    "AudioContext", "AudioDestinationNode", "AudioNode", "AudioParam", "GainNode", "OscillatorNode", "OscillatorType",
]}
