[package]
name = "notation_bevy_utils"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - bevy utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
# https://github.com/serde-rs/serde/issues/1937
serde_arrays = "0.1.0"
anyhow = "1.0"
ron = "0.7"
float_eq = "0.7"

bevy = { version = "0.6.0", default-features = false }

rand = "0.8"
getrandom = { version="0.2", features=["wasm-bindgen"] }

bevy_prototype_lyon = "0.4.0"
bevy_egui = "0.11.1"
bevy_easings = "0.5.0"
