[package]
name = "notation_bevy_utils"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - bevy utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

with_egui = [
    "bevy_egui",
    "egui",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# https://github.com/serde-rs/serde/issues/1937
serde_arrays = "0.1"
anyhow = "1.0"
ron = "0.8"
float_eq = "1.0"

bevy = { version = "0.9", default-features = false }

rand = "0.8"
getrandom = { version = "0.2", features=["wasm-bindgen"] }

bevy_prototype_lyon = "0.7"
bevy_easings = "0.9"

bevy_egui = { version = "0.17", optional = true }
egui = { version = "0.19", optional = true }
