[package]
name = "notation_bevy_utils"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - bevy utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
]

with_egui = [
    "bevy_egui",
    "egui",
]

[dependencies]
bevy = { workspace = true }
bevy_prototype_lyon = { workspace = true }
bevy_easings = { workspace = true }

bevy_egui = { workspace = true, optional = true }
egui = { workspace = true, optional = true }

serde = { workspace = true }
serde_arrays = { workspace = true }
ron = { workspace = true }
anyhow = { workspace = true }

float_eq = { workspace = true }

rand = { workspace = true }
getrandom = { workspace = true }

