[package]
name = "notation_core"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/notation-fun/notation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
fehler = "1.0"
serde = {version = "1.0.126", features = ["derive"]}
