[package]
name = "notation_core"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - definition for core concepts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
fehler = "1.0"
serde = { version = "1.0.126", features = ["derive"] }
