[package]
name = "notation_dsl"
version = "0.6.0"
description = "Fun notation - DSL to create notation files"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[dependencies]
notation_proto = { workspace = true }

fehler = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }

syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
