[package]
name = "notation_fretted"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - definition for fretted instruments"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
notation_core = { version = "0.5.0", path = "../notation_core" }

serde = { version = "1.0.126", features = ["derive"] }

# https://github.com/serde-rs/serde/issues/1937
serde_arrays = "0.1.0"