[package]
name = "notation_fretted"
version = "0.6.0"
description = "Fun notation - definition for fretted instruments"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[dependencies]
notation_core = { workspace = true }

serde = { workspace = true }
serde_arrays = { workspace = true }