[package]
name = "notation_guitar"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
notation_core = { path = "../notation_core" }
notation_fretted = { path = "../notation_fretted" }

serde = {version = "1.0.126", features = ["derive"]}
