[package]
name = "notation_guitar"
version = "0.4.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - definition for guitar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
notation_core = { version = "0.4.3", path = "../notation_core" }
notation_fretted = { version = "0.4.3", path = "../notation_fretted" }

serde = { version = "1.0.126", features = ["derive"] }
