[package]
name = "notation_midi"
version = "0.3.4"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - midi features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[features]

[dependencies]
notation_model = { version = "0.3.4", path = "../notation_model" }
notation_audio = { version = "0.3.4", path = "../notation_audio" }

midir = "0.7"
bevy = { version = "0.5.0", default-features = false }

helgoboss-midi = "0.2"
midi-msg = "0.3.0"
dmsort = "1.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fluidlite = { version = "0.2.0" }
bevy_kira_audio = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.69"
