[package]
name = "notation_midi"
version = "0.6.0"
description = "Fun notation - midi features"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[features]

[dependencies]
notation_model = { workspace = true }
notation_audio = { workspace = true }

bevy = { workspace = true }
bevy_kira_audio = { workspace = true }

midir = "0.8"
helgoboss-midi = "0.4"
midi-msg = "0.4"
dmsort = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fluidlite = { version = "0.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
