[package]
name = "notation_model"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
notation_proto = { path = "../notation_proto" }
thiserror = "1.0"
fehler = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"
