[package]
name = "notation_model"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - runtime models"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
notation_proto = { version = "0.3.1", path = "../notation_proto" }
thiserror = "1.0"
fehler = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"
