[package]
name = "notation_proto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
serde = {version = "1.0.126", features = ["derive", "alloc"]}
notation_core = { path = "../notation_core" }
notation_fretted = { path = "../notation_fretted" }
notation_guitar = { path = "../notation_guitar" }
