[package]
name = "notation_proto"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/notation-fun/notation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
serde = {version = "1.0.126", features = ["derive", "alloc"]}
uuid = { version = "0.8", features = ["serde", "v4"] }

notation_core = { path = "../notation_core" }
notation_fretted = { path = "../notation_fretted" }
notation_guitar = { path = "../notation_guitar" }
