[package]
name = "notation_proto"
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://www.notation.fun"
repository = "https://github.com/notation-fun/notation"
description = "Fun notation - protocol for storage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
serde = { version = "1.0.126", features = ["derive", "alloc"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

notation_core = { version = "0.4.0", path = "../notation_core" }
notation_fretted = { version = "0.4.0", path = "../notation_fretted" }
notation_guitar = { version = "0.4.0", path = "../notation_guitar" }
