[package]
name = "notation_tab"
version = "0.6.0"
description = "Fun notation - tab tools"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[dependencies]
notation_proto = { workspace = true }
notation_dsl  = { workspace = true }
notation_macro  = { workspace = true }

serde = { workspace = true }
ron = { workspace = true }
anyhow = { workspace = true }
