[package]
name = "notation_macro"
version = "0.6.0"
description = "Fun notation - DSL to create notation files"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
proc-macro = true

[dependencies]
notation_dsl = { workspace = true }
