[package]
name = "notation_core"
version = "0.6.0"
description = "Fun notation - definition for core concepts"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[dependencies]
fehler = { workspace = true }
serde = { workspace = true }
