[package]
name = "notation_guitar"
version = "0.6.0"
description = "Fun notation - definition for guitar"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[dependencies]
notation_core = { workspace = true }
notation_fretted = { workspace = true }

serde = { workspace = true }
