[package]
name = "notation_model"
version = "0.6.0"
description = "Fun notation - runtime models"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[dependencies]
notation_proto = { workspace = true }
thiserror = { workspace = true }
fehler = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"

