[package]
name = "notation_proto"
version = "0.6.0"
description = "Fun notation - protocol for storage"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]

[dependencies]
notation_core = { workspace = true }
notation_fretted = { workspace = true }
notation_guitar = { workspace = true }

serde = { workspace = true }
uuid = { workspace = true }
